Assistant checkpoint: Update WhatsApp bot with enhanced features
Assistant generated file changes:
- index.js: Update WhatsApp bot with enhanced features

---

User prompt:

const { default: makeWASocket, useMultiFileAuthState, DisconnectReason, downloadMediaMessage, makeInMemoryStore } = require("@whiskeysockets/baileys");
const pino = require("pino");
const fs = require("fs");
const path = require("path");
const express = require("express");
const axios = require("axios");

const app = express();
const PORT = process.env.PORT || 3000;
const store = makeInMemoryStore({ logger: pino().child({ level: "silent" }) });
const bannedUsers = new Set();
let autoReplyEnabled = true;
let customReplyText = "I'm a bot. Type !menu for help.";
let activePoll = null;

// Web server to keep the bot alive
app.get("/", (req, res) => res.send("WhatsApp Bot is running."));
app.listen(PORT, () => console.log(`Keep-alive web server running on port ${PORT}`));

const startSock = async () => {
    const { state, saveCreds } = await useMultiFileAuthState("auth_info");
    const sock = makeWASocket({
        logger: pino({ level: "silent" }),
        printQRInTerminal: true,
        auth: state
    });

    store.bind(sock.ev);
    sock.ev.on("creds.update", saveCreds);

    sock.ev.on("connection.update", ({ connection, lastDisconnect }) => {
        if (connection === "close" && lastDisconnect?.error?.output?.statusCode !== DisconnectReason.loggedOut) {
            startSock();
        } else if (connection === "open") {
            console.log("Connected to WhatsApp!");
        }
    });

    sock.ev.on("messages.upsert", async ({ messages, type }) => {
        if (type !== "notify") return;
        const msg = messages[0];
        if (!msg.message) return;

        const from = msg.key.remoteJid;
        const isGroup = from.endsWith("@g.us");
        const sender = msg.key.participant || msg.key.remoteJid;
        const message = msg.message.conversation || msg.message.extendedTextMessa

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^22.13.11",
     "@whiskeysockets/baileys": "^6.17.16",
+    "axios": "^1.8.4",
     "express": "^5.1.0",
     "pino": "^9.6.0"
   }
